--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js" type="module"></script>
+    <script src="main.js" type="module" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
         <Button class="addBook">Add Book</Button>
     </div>
     <dialog class="dialog" id= "dialog">
+        <div id ="error"></div>
         <form class="form" id = "form">
             <h2>Add a new book!</h2>
             <label>
